<resources>
    <string name="app_name">Breaking Bad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header">header</string>
    <string name="character_image">Character image</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="characters">Characters</string>
    <string name="detail_image">Detail image</string>
    <string name="birthday">Birthday</string>
    <string name="status">Status</string>
    <string name="breaking_bad_seasons">Breaking Bad Seasons</string>
    <string name="occupation">Occupation</string>
</resources>