<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.breakingbad.detail.DetailViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detail.DetailFragment"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/detail_image"
            app:image="@{viewModel.selectedCharacter.img}"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/detailName"
            android:text="@string/name"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailName1"
            android:text="@{viewModel.selectedCharacter.name}"
            android:textSize="15sp"
            android:paddingHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailNickname"
            android:text="@string/nickname"
            android:textSize="20sp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailNickname1"
            android:text="@{viewModel.selectedCharacter.nickname}"
            android:textSize="15sp"
            android:paddingHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailBirthday"
            android:text="@string/birthday"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:paddingHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailBirthday1"
            android:text="@{viewModel.selectedCharacter.birthday}"
            android:textSize="15sp"
            android:paddingHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailAppearance"
            android:text="@string/breaking_bad_seasons"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:paddingHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailAppearance1"
            android:text="@{viewModel.selectedCharacter.appearance}"
            android:textSize="15sp"
            android:paddingHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailOccupation"
            android:text="@string/occupation"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:paddingHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailOccupation1"
            android:text="@{viewModel.selectedCharacter.occupation}"
            android:textSize="15sp"
            android:paddingHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailStatus"
            android:text="@string/status"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:paddingHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailStatus1"
            android:text="@{viewModel.selectedCharacter.status}"
            android:textSize="15sp"
            android:paddingHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</layout>